--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;900&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    text-decoration: none;
-    list-style: none;
     box-sizing: border-box;
     font-size: 62.5%;
 }
@@ -23,7 +18,7 @@
     --header-1: 6.4rem;
     --header-2: 4.8rem;
     --header-3: 4.2rem;
-    --header-4: 32rem;
+    --header-4: 3.2rem;
 
     --text-medium: 1.6rem;
     --text-regular: 1.4rem;
@@ -63,3 +58,13 @@ body {
 
 /* button secondary */
 
+.navbar{
+    padding: 0 4.8rem;
+}
+
+a.nav-link{
+    margin-right: 3rem;
+    font-size: var(--text-regular);
+    font-weight: var(--font-weight-regular);
+    color: var(--primary);
+}
