--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@
     --light: #F2F4E9;
     --yellow: #F1EBBB;
     --white: #ffffff;
-    --box-shadow: 0 8px 22px rgba(0,0,0,0.1);
+    --box-shadow: 0 8px 22px rgba(0, 0, 0, 0.1);
 
     /* Font Size Desktop */
     --header-1: 6.4rem;
@@ -35,36 +35,188 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    line-height: 1.7;
-    color: var(--primary);
+    background-color: var(--primary);
 }
 
-.btn{
+h2{
+    font-size: 3.6rem;
+    font-weight: bold;
+}
+
+p{
+    font-size: 1.6rem;
+
+}
+
+.btn {
     padding: 1.5rem 2.5rem;
     border-radius: 0.6rem;
     font-size: var(--text-regular);
-    font-weight: var(--font-weight-medium);
+    font-weight: var(--font-weight-bold);
 
 }
 
-.btn-primary{
+.btn-primary {
     background: var(--primary);
     border: none;
 }
 
-.btn-primary:hover{
-    background: var(--secondary);
+.btn-primary:hover {
+    background: var(--yellow);
+    color: var(--primary);
 }
 
 /* button secondary */
 
-.navbar{
+.navbar {
     padding: 0 4.8rem;
+    background: var(--light);
 }
 
-a.nav-link{
+a.nav-link:hover{
+    color: var(--primary);
+    font-weight: var(--font-weight-bold);
+}
+
+a.nav-link {
     margin-right: 3rem;
     font-size: var(--text-regular);
     font-weight: var(--font-weight-regular);
     color: var(--primary);
+}
+
+a.nav-link:hover{
+    font-weight: var(--font-weight-bold);
+}
+
+/* Hero */
+
+section.hero {
+    padding: 6rem 0;
+    position: relative;
+}
+
+.hero {
+    width: 100%;
+    height: 60vh;
+    background: var(--light);
+    background-size: cover;
+}
+
+.hero-img {
+    width: 32rem;
+    height: auto;
+    position: absolute;
+    top: -2rem;
+    right: 10rem;
+}
+
+.text-label,
+.text-hero-bold,
+.text-hero-regular {
+    margin: 0;
+}
+
+.text-hero-bold {
+    color: var(--primary);
+    font-size: var(--header-1);
+    font-weight: var(--font-weight-bold);
+    line-height: 6rem;
+}
+
+.text-hero-regular {
+    color: var(--primary);
+    font-size: var(--header-2);
+    font-weight: var(--font-weight-regular);
+}
+
+.text-label {
+    color: var(--primary);
+    font-size: var(--text-regular);
+    font-weight: var(--font-weight-regular);
+    line-height: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+@media (max-width: 576px) {
+    .hero-img {
+        display: none;
+    }
+}
+
+/* highlight */
+
+.highlight {
+    height: 100vh;
+    margin-top: 10rem;
+}
+
+.text-highlight-title h2{
+    color: var(--secondary);
+    text-align: center;
+}
+
+.text-highlight-title p{
+    color: var(--secondary);
+    text-align: center;
+}
+
+.highlight .icon{
+    display: flex;
+    flex-direction: row;
+    width: 7.2rem;
+    height: 7.2rem;
+    background: var(--secondary);
+    color: var(--primary);
+    border-radius: 50%;
+}
+
+/* Graph */
+
+/* Footer */
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0
+}
+
+ul>li {
+    padding: 4px;
+    color:#C5CAE9;
+}
+
+ul>li:hover {
+    color: #957bda;
+    cursor: pointer
+}
+
+hr {
+    border-width: 3px
+}
+
+.card {
+    padding: 2% 7%
+}
+
+.social>i {
+    padding: 1%;
+    font-size: 15px
+}
+
+.social>i:hover {
+    color: #957bda;
+    cursor: pointer
+}
+
+.policy>div {
+    padding: 4px
+}
+
+.heading {
+    font-family: 'Titillium Web', sans-serif;
+    color: black
+}
+
+.divider {
+    border-top: 2px solid
 }
