--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;900&display=swap');
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-size: 62.5%;
 }
@@ -13,39 +15,41 @@
     --yellow: #F1EBBB;
     --white: #ffffff;
     --box-shadow: 0 8px 22px rgba(0, 0, 0, 0.1);
-
-    /* Font Size Desktop */
-    --header-1: 6.4rem;
-    --header-2: 4.8rem;
-    --header-3: 4.2rem;
-    --header-4: 3.2rem;
-
-    --text-medium: 1.6rem;
-    --text-regular: 1.4rem;
-    --text-light: 1.3rem;
-
-    /* Font Weight */
-    --font-weight-bold: 700;
-    --font-weight-semi-bold: 600;
-    --font-weight-medium: 500;
-    --font-weight-regular: 400;
-    --font-weight-light: 300;
-
 }
 
 body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--primary);
+    line-height: 1.7;
 }
 
-h2{
+h1,
+h2,
+h3,
+h4,
+h5 {
+    line-height: 1.2;
+}
+
+h1 {
     font-size: 3.6rem;
-    font-weight: bold;
+    font-weight: 700;
 }
 
-p{
-    font-size: 1.6rem;
+h2 {
+    font-size: 3rem;
+}
 
+h3 {
+    font-size: 1.8rem;
+}
+
+h4 {
+    font-size: 1.8rem;
+}
+
+p {
+    font-size: 1.6rem;
 }
 
 .btn {
@@ -68,12 +72,13 @@ p{
 
 /* button secondary */
 
+/* navbar */
 .navbar {
     padding: 0 4.8rem;
     background: var(--light);
 }
 
-a.nav-link:hover{
+a.nav-link:hover {
     color: var(--primary);
     font-weight: var(--font-weight-bold);
 }
@@ -85,7 +90,7 @@ a.nav-link {
     color: var(--primary);
 }
 
-a.nav-link:hover{
+a.nav-link:hover {
     font-weight: var(--font-weight-bold);
 }
 
@@ -98,91 +103,188 @@ section.hero {
 
 .hero {
     width: 100%;
-    height: 60vh;
+    height: 50vh;
     background: var(--light);
     background-size: cover;
 }
 
 .hero-img {
-    width: 32rem;
-    height: auto;
+    width: auto;
+    height: 55vh;
     position: absolute;
     top: -2rem;
     right: 10rem;
 }
 
-.text-label,
-.text-hero-bold,
-.text-hero-regular {
-    margin: 0;
-}
-
-.text-hero-bold {
+.hero h1,
+h2,
+p {
     color: var(--primary);
-    font-size: var(--header-1);
-    font-weight: var(--font-weight-bold);
-    line-height: 6rem;
-}
-
-.text-hero-regular {
-    color: var(--primary);
-    font-size: var(--header-2);
-    font-weight: var(--font-weight-regular);
-}
-
-.text-label {
-    color: var(--primary);
-    font-size: var(--text-regular);
-    font-weight: var(--font-weight-regular);
-    line-height: 1.5rem;
-    padding-bottom: 1.5rem;
-}
-
-@media (max-width: 576px) {
-    .hero-img {
-        display: none;
-    }
 }
 
 /* highlight */
 
 .highlight {
-    height: 100vh;
-    margin-top: 10rem;
+    height: auto;
+    margin: 10rem;
 }
 
-.text-highlight-title h2{
+.highlight h2,
+h4,
+p {
     color: var(--secondary);
-    text-align: center;
 }
 
-.text-highlight-title p{
-    color: var(--secondary);
-    text-align: center;
-}
-
-.highlight .icon{
-    display: flex;
-    flex-direction: row;
-    width: 7.2rem;
-    height: 7.2rem;
+.highlight-icon {
+    width: 6rem;
+    height: 6rem;
+    font-size: 4rem;
     background: var(--secondary);
     color: var(--primary);
     border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    display: inline-flex;
 }
+
+.highlight-container h4 {
+    margin-left: 2rem;
+    display: inline-flex;
+    align-items: center;
+}
+
+/* Process */
+
+.process {
+    width: 100%;
+    height: auto;
+    padding: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: var(--secondary);
+}
+
+.process-title {
+    color: var(--primary);
+    text-align: center;
+}
+
+.process-item {
+    display: flex;
+    margin-top: 5rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.process-item li {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 2rem;
+}
+
+.process-icon {
+    font-size: 3.5rem;
+    margin: 0 6rem;
+}
+
+.process-text {
+    font-size: 1.6rem;
+}
+
+.process-item .progress-list .progress {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: rgba(68, 68, 68, 0.781);
+    margin: 14px 0;
+    display: grid;
+    place-items: center;
+    color: #fff;
+    position: relative;
+    cursor: pointer;
+}
+
+.progress::after {
+    content: " ";
+    position: absolute;
+    width: 125px;
+    height: 5px;
+    background-color: rgba(68, 68, 68, 0.781);
+    right: 30px;
+}
+
+.one::after {
+    width: 0;
+    height: 0;
+}
+
+.process-item .progress-list .progress .uil {
+    display: none;
+}
+
+.process-item .progress-list.progress p {
+    font-size: 13px;
+}
+
+/* Active Css  */
+
+.process-item .progress-list .active {
+    background-color: #ff4732;
+    display: grid;
+    place-items: center;
+}
+
+.progress-list .active::after {
+    background-color: #ff4732;
+}
+
+.process-item .progress-list .active p {
+    display: none;
+}
+
+.process-item .progress-list .active .uil {
+    font-size: 20px;
+    display: flex;
+}
+
+
+
 
 /* Graph */
 
+/* feedback */
+.feedback{
+    width: 100%;
+    height: auto;
+    padding: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: var(--light);
+}
+.carousel-indicators{
+    color: #204D36;
+}
 /* Footer */
 ul {
     list-style-type: none;
     margin: 0;
-    padding: 0
+    padding: 0;
+    color: var(--secondary);
+    font-size: 1.6rem;
 }
+
 
 ul>li {
     padding: 4px;
-    color:#C5CAE9;
+    color: var(--secondary);
+    font-size: 1.4rem;
 }
 
 ul>li:hover {
@@ -195,7 +297,7 @@ hr {
 }
 
 .card {
-    padding: 2% 7%
+    padding: 2% 0%
 }
 
 .social>i {
